refactor: restructure docs to match templates structure
## Summary
Refactor docs/ folder to match templates/ structure ensuring:
- Consistent folder structure
- English headers and frontmatter
- Standardized section naming (Overview, Contents, References)

## Changes

### Folder Structure
- Flatten api/ subfolders (contracts/, mocks/ → flat files)
- Flatten design/ structure (design-system/ → tokens.md, typography.md, components.md)
- Flatten specs/01-architecture/ (backend/, frontend/ folders → single files)
- Move cross-cutting/ to specs/01-architecture/
- Flatten specs/03-quality/ (acceptance/, test-cases/ → single files)
- Rename specs/04-quality/ to specs/03-quality/
- Restructure project/ folder (timeline/, sprints/ → epics, sprint-plan, backlog)
- Move D2 assets from docs/specs/d2/ to static/d2/docs/

### File Renames
- roadmap.md → product-roadmap.md
- vision.md split → overview.md, requirements.md, use-cases.md

### Content Updates
- Translate all Vietnamese headers to English
- Add missing frontmatter (id, title, sidebar_label)
- Update internal references to match new structure
- Standardize section structure across all files

### Files Modified
- docs/README.md, docs/api/*, docs/design/*, docs/specs/*
- docs/project/*, docs/changelog/*, docs/user-guide/*
- docs/developer-guide/*

--- a/docs/changelog/v1.0.md
+++ b/docs/changelog/v1.0.md
@@ -1,18 +1,24 @@
+---
+id: v1-0
+title: Version 1.0
+sidebar_label: v1.0
+---
+
 # Version 1.0
 
 **Release Date:** January 16, 2026
 
-**Phiên bản đầu tiên của LMS Documentation!**
+**First version of LMS Documentation!**
 
 ---
 
 ## Features
 
 ### Documentation (Docs)
-- **User Guide**: Hướng dẫn sử dụng hệ thống LMS
+- **User Guide**: End-user guide for LMS system
   - Getting Started guide
   - FAQ section
-- **Developer Guide**: Tài liệu kỹ thuật cho developers
+- **Developer Guide**: Technical documentation for developers
   - Setup instructions
   - Development workflow
   - Deployment guide
@@ -33,7 +39,7 @@
 ### API Documentation (API)
 - **OpenAPI**: API specifications (main.yaml)
 - **Contracts**: API contracts
-- **Mocks**: Mock data và examples
+- **Mocks**: Mock data and examples
 
 ---
 
