--- a/docs/changelog/v1.0.md
+++ b/docs/changelog/v1.0.md
@@ -76,7 +76,7 @@ This is the first version, no migration needed.
 
 ## Links
 
-- [Full Documentation](/)
+- [Full Documentation](/specs/)
 - [Technical Specs](/specs/)
 - [Design System](/design/)
 - [API Reference](/api/)
