--- a/docs/changelog/v1.0.md
+++ b/docs/changelog/v1.0.md
@@ -26,18 +26,21 @@ sidebar_position: 1
   - Hướng dẫn triển khai (Deployment guide)
   - Quy tắc đóng góp (Contributing guidelines)
 
-
 ### Thông số kỹ thuật (Specs)
 
 - **Business**: Tầm nhìn, lộ trình, chỉ số, ràng buộc, thuật ngữ
-- **Architecture**: Thiết kế hệ thống, danh sách công nghệ (tech stack), mô hình dữ liệu (data model), tài liệu quyết định kiến trúc (ADRs)
-- **Modules**: Auth, Content, Learning, Admin, Analytics, Gamification, Tournament, Realtime
-- **Cross-cutting**: API Gateway, Security, Performance, Monitoring, Error Handling
+- **Architecture**: Thiết kế hệ thống, danh sách công nghệ (tech stack), mô hình
+  dữ liệu (data model), tài liệu quyết định kiến trúc (ADRs)
+- **Modules**: Auth, Content, Learning, Admin, Analytics, Gamification,
+  Tournament, Realtime
+- **Cross-cutting**: API Gateway, Security, Performance, Monitoring, Error
+  Handling
 - **Quality**: Chiến lược test, tự động hóa, benchmarks
 
 ### Hệ thống thiết kế (Design)
 
-- **Research**: Personas, hành trình người dùng (User journeys), kiểm thử khả năng sử dụng (Usability testing)
+- **Research**: Personas, hành trình người dùng (User journeys), kiểm thử khả
+  năng sử dụng (Usability testing)
 - **Design System**: Các hướng dẫn, Design tokens
 - **Wireframes**: Bản vẽ phác thảo UI/UX
 
