--- a/blueprint/architecture/decisions/0008-rbac.md
+++ b/blueprint/architecture/decisions/0008-rbac.md
@@ -1,7 +1,7 @@
 ---
 id: adr-008
-title: "ADR-008: RBAC with 5 Seed Roles"
-sidebar_label: "008: RBAC"
+title: 'ADR-008: RBAC with 5 Seed Roles'
+sidebar_label: '008: RBAC'
 sidebar_position: 8
 ---
 
@@ -13,7 +13,8 @@ Cần authorization model linh hoạt.
 
 ## Decision
 
-**RBAC** với 5 roles: `root-admin`, `tenant-admin`, `teacher`, `parent`, `student`.
+**RBAC** với 5 roles: `root-admin`, `tenant-admin`, `teacher`, `parent`,
+`student`.
 
 ## Rationale
 
