--- a/blueprint/architecture/decisions/0009-rbac.md
+++ b/blueprint/architecture/decisions/0009-rbac.md
@@ -1,11 +1,11 @@
 ---
-id: adr-0009
-title: 'ADR-0009: RBAC with 5 Seed Roles'
+id: 0009-rbac
+title: '0009: RBAC'
 sidebar_label: '0009: RBAC'
 sidebar_position: 9
 ---
 
-# ADR-0009: RBAC with 5 Seed Roles
+# 0009: RBAC
 
 Cần authorization model linh hoạt.
 
