--- a/blueprint/architecture/decisions/0009-rbac.md
+++ b/blueprint/architecture/decisions/0009-rbac.md
@@ -9,6 +9,8 @@ sidebar_position: 9
 
 Cần authorization model linh hoạt.
 
+Enforces: [`NFR-SEC-01`](../../product/constraints.md#security)
+
 ---
 
 ## Decision
